extra divs voor start en eind scherm

--- a/index.html
+++ b/index.html
@@ -8,14 +8,42 @@
 </head>
 <body>
 
-<section id="grootScherm">
-    <h1>Webapplicatie Tijdlijn</h1>
-</section>
+<div id="startScherm" style="display:none;">
 
-<section id="touchscreenScherm">
-    <div id="dragBox"></div>
-    <div class="timeline" id="timeline"></div>
-</section>
+    <section id="grotScherm">
+
+    </section>
+    <section id="touchscreenScherm">
+
+    </section>
+
+</div>
+
+<div id="gameScherm">
+
+    <section id="grootScherm">
+        <h1>Webapplicatie Tijdlijn</h1>
+    </section>
+
+    <section id="touchscreenScherm">
+        <div id="dragBox"></div>
+        <div class="timeline" id="timeline"></div>
+
+        <div id="popup" style="display:hidden;"></div>
+    </section>
+
+</div>
+
+<div id="eindScherm" style="display:none;">
+
+    <section id="grotScherm">
+
+    </section>
+    <section id="touchscreenScherm">
+
+    </section>
+
+</div>
 
 <script src="script.js"></script>
 
