extra div tags voor style

--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 </head>
 <body>
 
-<div id="startScherm" style="display:none;">
+<div id="startScherm">
 
-    <section id="grotScherm">
+    <section class="grootScherm" id="grootStartScherm">
 
     </section>
-    <section id="touchscreenScherm">
+    <section id="touchscreenStartScherm">
 
     </section>
 
 </div>
 
-<div id="gameScherm">
+<div id="gameScherm" style="display:none;">
 
-    <section id="grootScherm">
+    <section class="grootScherm" id="grootScherm">
         <h1>Webapplicatie Tijdlijn</h1>
     </section>
 
@@ -36,10 +36,10 @@
 
 <div id="eindScherm" style="display:none;">
 
-    <section id="grotScherm">
+    <section class="grootScherm" id="grootEindScherm">
 
     </section>
-    <section id="touchscreenScherm">
+    <section id="touchscreenStartScherm">
 
     </section>
 
