--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 <div id="startScherm">
 
     <section class="grootScherm" id="grootStartScherm">
-
+        <h1>Welkom bij de Webapplicatie Tijdlijn</h1>
+        <p>Selecteer een taal om te beginnen:</p>
     </section>
-    <section id="touchscreenStartScherm">
 
+    <section class="touchScreen" id="touchscreenStartScherm">
+        <button onclick="startGame('nl')">Nederlands</button>
+        <button onclick="startGame('fr')">Français</button>
+        <button onclick="startGame('de')">Deutsch</button>
+        <button onclick="startGame('en')">English</button>
     </section>
 
 </div>
@@ -25,7 +30,7 @@
         <h1>Webapplicatie Tijdlijn</h1>
     </section>
 
-    <section id="touchscreenScherm">
+    <section class="touchScreen" id="touchscreenScherm">
         <div id="dragBox"></div>
         <div class="timeline" id="timeline"></div>
 
@@ -39,7 +44,7 @@
     <section class="grootScherm" id="grootEindScherm">
 
     </section>
-    <section id="touchscreenStartScherm">
+    <section class="touchScreen" id="touchscreenStartScherm">
 
     </section>
 
