--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="timeline" id="timeline"></div>
 
         <div id="popup" style="display:hidden;"></div>
+        <button onclick="resetToStart()">Terug naar Start</button>
     </section>
 
 </div>
@@ -45,7 +46,7 @@
 
     </section>
     <section class="touchScreen" id="touchscreenStartScherm">
-
+        <button onclick="resetToStart()">Terug naar Start</button>
     </section>
 
 </div>
