style van script naar css

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <div id="dragBox"></div>
         <div class="timeline" id="timeline"></div>
 
-        <div id="popup" style="display:hidden;"></div>
+        <div id="popup" style="display:none;">
+            <button id="hidePopup" onclick="hidePopup()">Hide</button>
+        </div>
         <button onclick="resetToStart()">H</button>
     </section>
 
