--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webapplicatie Tijdlijn</title>
+    <title>Tijdlijn</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
@@ -27,7 +27,7 @@
 <div id="gameScherm" style="display:none;">
 
     <section class="grootScherm" id="grootScherm">
-        <h1>Webapplicatie Tijdlijn</h1>
+        <h1>Westfront</h1>
     </section>
 
     <section class="touchScreen" id="touchscreenScherm">
