home icon ipv button

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id="popup" style="display:none;">
             <button id="hidePopup" onclick="hidePopup()">Hide</button>
         </div>
-        <button onclick="resetToStart()">H</button>
+        <img src="img/home.png" onclick="resetToStart()" alt="">
     </section>
 
 </div>
@@ -48,7 +48,7 @@
 
     </section>
     <section class="touchScreen" id="touchscreenStartScherm">
-        <button onclick="resetToStart()">H</button>
+        <img src="img/home.png" onclick="resetToStart()" alt="">
     </section>
 
 </div>
