extra uitleg div bij spel

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     </section>
 
     <section class="touchScreen" id="touchscreenStartScherm">
-        <button onclick="startGame('nl')">Nederlands</button>
-        <button onclick="startGame('fr')">Français</button>
-        <button onclick="startGame('de')">Deutsch</button>
-        <button onclick="startGame('en')">English</button>
+        <ul>
+            <li onclick="startGame('nl')">Nederlands</li>
+            <li onclick="startGame('fr')">Français</li>
+            <li onclick="startGame('de')">Deutsch</li>
+            <li onclick="startGame('en')">English</li>
+        </ul>
     </section>
 
 </div>
@@ -31,6 +33,7 @@
     </section>
 
     <section class="touchScreen" id="touchscreenScherm">
+        <div id="explanation"></div>
         <div id="dragBox"></div>
         <div class="timeline" id="timeline"></div>
 
