style changes and fonts upload

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </section>
 
     <section class="touchScreen" id="touchscreenStartScherm">
-        <ul>
+        <ul id="languageList">
             <li onclick="startGame('nl')">start het spel</li>
             <li onclick="startGame('fr')">commencer le jeu</li>
             <li onclick="startGame('de')">starte das Spiel</li>
