--- a/index.html
+++ b/index.html
@@ -32,24 +32,14 @@
     </section>
 
     <section class="touchScreen" id="touchscreenScherm">
-        <div id="explanation"></div>
-        <div id="dragBox"></div>
+        <div id="touchScreenTop">
+            <div id="explanation" class="touchScreenTop"></div>
+            <div id="dragBox" class="touchScreenTop"></div>
+            <div id="popup" class="touchScreenTop"></div>
+        </div>
+
         <div class="timeline" id="timeline"></div>
 
-        <div id="popup" style="display:none;">
-            <button id="hidePopup" onclick="hidePopup()">Hide</button>
-        </div>
-        <img id="home" src="img/home.png" onclick="resetToStart()" alt="">
-    </section>
-
-</div>
-
-<div id="eindScherm" style="display:none;">
-
-    <section class="grootScherm" id="grootEindScherm">
-
-    </section>
-    <section class="touchScreen" id="touchscreenStartScherm">
         <img id="home" src="img/home.png" onclick="resetToStart()" alt="">
     </section>
 
