--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
 
 <div id="gameScherm" style="display:none;">
 
-    <section class="grootScherm" id="grootScherm">
-        <h1>Westfront</h1>
-    </section>
+    <section class="grootScherm" id="grootScherm"></section>
 
     <section class="touchScreen" id="touchscreenScherm">
         <div id="touchScreenTop">
